Fix comments alignment.

--- a/sass/_responsive.sass
+++ b/sass/_responsive.sass
@@ -62,3 +62,4 @@
 
     #comments, #disqus_thread
         width: 100%
+        margin-left: 0
